fix: explicitly enable native access for netty