@@ -29,6 +29,7 @@ jib {
             "-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005",
             "-Dlogback.configurationFile=logback.xml",
             "-Xmx2G",
+            "--enable-native-access=ALL-UNNAMED"
         )
         ports = listOf("58700", "58701", "5005")
         volumes = listOf("/logs", "/logback.xml")
